# mdl-core

./: .gitignore  README.md  gcp-vms.md  pyproject.toml
src/mdl/core/: __init__.py
src/mdl/log/: __init__.py  logger.toml
