[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdl-core"
description = "Core tools for working with long-read data"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [ "Click", "tomli; python_version < '3.11'" ]
optional-dependencies = { dev = ["pre-commit", "ruff"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "mdl.core.__version__"}

[tool.ruff]
src = ["src"]
select = ["E", "F", "I", "A"]
ignore = ["E501"]
