[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdl-core"
version = "0.1.0"
description = "Core tools for working with long-read data"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [ "Click", "tomli; python_version < '3.11'" ]
optional-dependencies = { dev = ["pre-commit", "ruff"] }

[tool.setuptools.package-data]
"mdl.log" = ["logger.toml"]

[tool.ruff]
src = ["src"]
select = ["E", "F", "I", "A"]
ignore = ["E501"]
